# visual_slam

./: CMakeLists.txt  README.md  package.xml  todo
config/: config.yaml
scripts/: create_bagfile.py
src/common/: make_unique.h  math.h
src/core/: ceres_pose.cc  ceres_pose.h  frame.cc  frame.h  optimizer.cc  optimizer.h  reprojection_error.h  slam.cc  slam.h  superpoint_frontend.cc  superpoint_frontend.h  tracked_point.h  tracking.cc  tracking.h
src/sensor/: image_data.h  odometry_data.h
src/top/: main.cc  playable_bag.cc  playable_bag.h  sensor_bridge.cc  sensor_bridge.h
src/transform/: rigid_transform.cc  rigid_transform.h  timestamped_transform.cc  timestamped_transform.h  transform.h  transform_interpolation_buffer.cc  transform_interpolation_buffer.h
